k8s/apps/headlessx/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: api
          image: ghcr.io/slashnephy/headlessx-api:2.1.2@sha256:61ca648e68dee10a28526e63daea5fd8154e885f49057ac5316f0864ecf07602
          ports:
            - name: api
              containerPort: 8000
          volumeMounts:
            - name: models
              mountPath: /app/apps/api/models
            - name: data
              mountPath: /app/apps/api/data
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
        - name: web
          image: ghcr.io/slashnephy/headlessx-web:2.1.2@sha256:498c7e70875e15bdcd57523405c4303f220888c8bf492b6652f3136d1944991e
          ports:
            - name: web
              containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: models
          hostPath:
            path: /mnt/local/headlessx/models
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /mnt/local/headlessx/data
            type: DirectoryOrCreate
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
