k8s/apps/headlessx/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  selector:
    app: default
  ports:
    - name: api
      port: 8000
      targetPort: api
    - name: web
      port: 3000
      targetPort: web
